добавил шрифты, начал миксины и хедер

--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -10,13 +10,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&family=Open+Sans:wght@300;400&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="/CSS/global.css">
 
     <title>HW5</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="header__logo">
             <img src="images/logo.png" class="header-logo__img">
         </div>
