--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -36,13 +36,13 @@
             </ul>
         </nav>
 
-        <div class="header__button">
-            <button>Gift Finder</button>
-        </div>
+
+        <button class="header__button">Gift Finder</button>
+
 
     </header>
 
-    <main>
+    <!-- <main>
         <section class="container-section container-section__1">
             <h2>Find a gift for your wife or girlfriend</h2>
             <p>Struggling to find a gift for your wife or girlfriend?
@@ -65,7 +65,7 @@
                 match you with a few perfect gift options.</p>
             <button>learn more</button>
         </section>
-    </main>
+    </main> -->
 </body>
 
 </html>
