Закончена разметка main

--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -42,8 +42,8 @@
 
     </header>
 
-    <!-- <main>
-        <section class="container-section container-section__1">
+    <main class="main">
+        <section class="main-section main__text container-section container-section__1">
             <h2>Find a gift for your wife or girlfriend</h2>
             <p>Struggling to find a gift for your wife or girlfriend?
                 No problem!</p>
@@ -58,14 +58,14 @@
             <img src="images/card.png" alt="visiting card" class="main-section__photo">
         </section>
 
-        <section class="container-section container-section__2">
+        <section class="main-section main__text container-section container-section__2">
             <h3>How we work</h3>
             <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All
                 you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
                 match you with a few perfect gift options.</p>
             <button>learn more</button>
         </section>
-    </main> -->
+    </main>
 </body>
 
 </html>
