--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -63,7 +63,7 @@
             <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All
                 you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
                 match you with a few perfect gift options.</p>
-            <button>learn more</button>
+            <button class="main-section__btn">learn more</button>
         </section>
     </main>
 </body>
