--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -47,7 +47,7 @@
             <h2>Find a gift for your wife or girlfriend</h2>
             <p>Struggling to find a gift for your wife or girlfriend?
                 No problem!</p>
-            <button class='main-section__btn'>Find gift now</button>
+            <button class='main-section__btn main-section__orange'>Find gift now</button>
         </section>
 
         <section class="main-section">
@@ -63,7 +63,7 @@
             <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All
                 you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
                 match you with a few perfect gift options.</p>
-            <button class="main-section__btn">learn more</button>
+            <button class="main-section__btn white">learn more</button>
         </section>
     </main>
 </body>
