разметил новые блоки в main, накинул старт. стили

--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <main class="main">
-        <section class="main-section main__text container-section container-section__1">
+        <section class="main-section main__text">
             <h2>Find a gift for your wife or girlfriend</h2>
             <p>Struggling to find a gift for your wife or girlfriend?
                 No problem!</p>
@@ -58,12 +58,38 @@
             <img src="images/card.png" alt="visiting card" class="main-section__photo">
         </section>
 
-        <section class="main-section main__text container-section container-section__2">
+        <section class="main-section main__text">
             <h3>How we work</h3>
             <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All
                 you have to do is take our short survey that only takes seconds, and our proprietary algorithm will
                 match you with a few perfect gift options.</p>
             <button class="main-section__btn white">learn more</button>
+        </section>
+
+        <section class="get-started">
+            <h3>Ready to get started?</h3>
+            <p>Sign up or contact us</p>
+            <button class="get-started__btn get-started__black-btn">
+                Find gift now
+            </button>
+            <button class="get-started__btn get-started__orange-btn">
+                how it works
+            </button>
+        </section>
+
+        <section class="blog">
+            <h3>Our Best Blogs Ever</h3>
+            <p>“Try our blog to find the best tips and tricks to select your gift”</p>
+            <div class="blog__container">
+                <div class="blog__container--img">
+                    <img src="" alt="cute cople">
+                </div>
+                <div class="blog__container--busines-card">
+                    <span>Mr. John Doe</span>
+                    <h2>The best way to wish your wife</h2>
+                    <p>Read More</p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
