Закончена верстка Blog, Разработка адаптива

--- a/HW_Bilevych_6/Homework_Bilevych_5/index.html
+++ b/HW_Bilevych_6/Homework_Bilevych_5/index.html
@@ -81,17 +81,39 @@
         </section>
 
         <section class="blog">
-            <h3>Our Best Blogs Ever</h3>
-            <p>“Try our blog to find the best tips and tricks to select your gift”</p>
+            <h3 class="blog__h3">Our Best Blogs Ever</h3>
+            <p class="blog__p">“Try our blog to find the best tips and tricks to select your gift”</p>
             <div class="blog__container">
-                <div class="blog__container--img">
-                    <img src="" alt="cute cople">
-                </div>
-                <div class="blog__container--busines-card">
-                    <span>Mr. John Doe</span>
-                    <h2>The best way to wish your wife</h2>
+
+                <img src="images\Media.png" alt="cute cople" class="blog__container--img">
+
+                <div class="blog__container--business-card">
+                    <p>Mr. John Doe</p>
+                    <h3>The best way to wish your wife</h3>
                     <p>Read More</p>
                 </div>
+            </div>
+            <div class="blog__info blog__info-1">
+                <h3>
+                    Database to find the gifts for your girlfriend
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore
+                    et dolore...
+                </p>
+                <a href="#">
+                    Read More
+                </a>
+            </div>
+            <div class="blog__info blog__info-2">
+                <h3>How Artificial Intelligence read your mind to find the best gift</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore
+                    et dolore...
+                </p>
+                <a href="#">
+                    Read More
+                </a>
             </div>
         </section>
     </main>
